Wed Jul 22 14:07:27 CEST 2009 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/amibe/ds/AbstractHalfEdge.java: New SHARP
	attribute.

Mon Jul 13 17:40:12 CEST 2009 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/bora/xmldata/BoraToUnvConvert.java: New helper
	class to export bora meshes as UNV files.

Tue Jul  7 15:54:17 CEST 2009 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/xmldata/MeshExporter.java: Fix UNV export of
	groups.  A 2435-block is written, but writeSingleGroupUNV() used
	a 2430-block syntax, which is different.  Fix it to comply with
	2435 syntax.
	* src/org/jcae/mesh/amibe/util/UNVWriter.java: Write a 2435-block
	for groups, 2430 is obsolete.

Tue Jul  7 12:09:45 CEST 2009 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/xmldata/MeshExporter.java: Use an enum for units.

Fri Jul  3 10:43:09 CEST 2009 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/bora/ds/BModel.java: New resetConstraints()
	method.  This method will be called by jCAE when modifying
	constraints.

Mon May  4 14:04:40 CEST 2009 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/xmldata/IntFileReaderByDirectBuffer.java: Fix
	infinite loop in copyFileIntoBuffer() when reading empty files.

Mon Apr 27 15:28:27 CEST 2009 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/amibe/ds/Triangle.java: New methods in
	Triangle.List class: size(), isEmpty().
	Let Triangle.List.iterator.remove() method remove triangle from
	this list.
	* src/org/jcae/mesh/amibe/algos2d/ConstraintNormal3D.java: After
	the first pass, only edges near swapped edges have to be checked.
	Speed up is noticeable with large meshes if several passes are
	needed.

Fri Apr 24 17:14:30 CEST 2009 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/amibe/metrics/Location.java
	  src/org/jcae/mesh/amibe/ds/Vertex.java: New Location interface,
	which is implemented by Vertex.