@@ -2,6 +2,10 @@ Wed Jul 22 14:07:27 CEST 2009 Denis Barbier <barbier@users.sourceforge.net>
 
 	* src/org/jcae/mesh/amibe/ds/AbstractHalfEdge.java: New SHARP
 	attribute.
+	* src/org/jcae/mesh/amibe/ds/Mesh.java: Rewrite buildRidges()
+	to flag edges with this new attribute instead of creating
+	virtual non-manifold edges.  Fix a bug in buildRidges(), angle
+	computation was wrong.
 
 Mon Jul 13 17:40:12 CEST 2009 Denis Barbier <barbier@users.sourceforge.net>
 
